--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   postgres: ^2.4.1
   file_picker: ^5.2.6
 
+  firebase_core: ^2.16.0
+  firebase_auth: ^4.8.0
+  cloud_firestore: ^4.11.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
